<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.pureway.cinemaflix.activity.privacysettings.SwitchProAccountActiviy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView

                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:onClick="back"
                android:padding="@dimen/dp_3"
                android:scaleType="fitXY"
                android:src="@drawable/ic_keyboard_backspace_black_24dp"
                android:tint="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/manage_my_account"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/grey"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/choose_a_category"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:fontFamily="@font/poppins_light"
            android:text="@string/select_a_category_to_get_customized_analytics_in_the_future_this_category_wont_be_displayed_publicly"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginTop="@dimen/sp_20">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/public_figure"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/personal_blog"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/education"
                        android:textColor="@color/black" />


                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/media"
                        android:textColor="@color/black" />


                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/music_dance"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/beauty_fashion"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/medical_health"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/entertainment"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:buttonTint="@color/purple"
                        android:fontFamily="@font/poppins_light"
                        android:layoutDirection="rtl"
                        android:text="@string/sports_fitness"
                        android:textColor="@color/black" />


                </RadioGroup>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_switch_pro"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_light"
        android:text="Switch"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>