<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.pureway.cinemaflix.activity.privacysettings.ManageMyAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/img_back_privacy"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:onClick="back"
                android:padding="@dimen/dp_3"
                android:scaleType="fitXY"
                android:src="@drawable/ic_keyboard_backspace_black_24dp"
                android:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/manage_my_account"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/grey" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:onClick="photofitCode"
                android:text="@string/photofit_code"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <RelativeLayout
                android:id="@+id/rl_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_phone_no_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/add_phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/poppins_light"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_email_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/poppins_light"
                    android:text="Add email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

            </RelativeLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_password_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/poppins_light"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/poppins_light"
                android:text="@string/save_login_info"
                android:textColor="@color/black"
                android:visibility="gone"
                android:id="@+id/switch_save_login_info"
                android:theme="@style/switchStyle"
                android:checked="true"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:visibility="gone"
                android:fontFamily="@font/poppins_light"
                android:onClick="switchPro"
                android:text="@string/switch_to_pro_account"
                android:textColor="@color/purple"
                android:textSize="@dimen/sp_14" />


        </LinearLayout>

    </LinearLayout>


    <TextView
        android:visibility="gone"
        android:id="@+id/tv_Delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:fontFamily="@font/poppins_light"
        android:onClick="deleteAccount"
        android:padding="@dimen/dp_3"
        android:text="@string/delete_account"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

</RelativeLayout>